remove all occurrences of network element names in deserializers
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>